# iterate-rs

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: about_the_docs.md  database_schema.md  learning_principles.md  sec_considerations.md  summary_algo.md
docs/ux/: journal_entry.md  journal_select.md  password_verification.md  session_lock_exit.md  summarizing.md
docs/ux/edge_cases/: app_crash.md  corrupted_journal.md  schema_migration.md
src/: main.tsx  routeTree.gen.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: journal.rs  mod.rs  record.rs
src-tauri/src/crypto/: aead.rs  constants.rs  cryptoenvelope.rs  kdf.rs  mod.rs  servicekeys.rs
src-tauri/src/database/: 001_init.sql  migrations.rs  mod.rs  open.rs  records.rs
src-tauri/src/services/: databasecleaner.rs  gatekeeper.rs  mod.rs
src/components/: AppShell.tsx
src/routes/: CreateJournal.tsx  UnlockJournal.tsx  __root.tsx  index.tsx
src/services/: storage.ts
