[package]
name = "iterate-rs"
version = "0.1.0"
description = "A Journaling app that helps with reenforced learning and repeated summaries"
authors = ["Nick Nad"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "iterate_rs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.148"
postcard = {version = "=1.1.3", features = ["use-std" ] }
parking_lot = "0.12.5"
aes-gcm = {version = "0.10.3", features = ["zeroize"] }
argon2 = "0.5.3"
hkdf = "0.12.4"
sha2 = "0.10.9"
rand = "0.9.2"
zeroize = "1.8.2"
thiserror = "2.0.17"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
rusqlite = {version =  "0.38.0", features = ["bundled"] }
chrono = "0.4.42"
tracing-subscriber = "0.3.22"
tracing = "0.1.44"

[dependencies.uuid]
version = "1.19.0"
features = [
    "v7",
    "serde",
]

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 
lto = true 
opt-level = 3 
panic = "abort" 
strip = true 
